clant (1.1.0) unstable; urgency=medium

  * Add --headers flag to enable checking individual headers

 -- David Robillard <d@drobilla.net>  Thu, 14 Jul 2022 18:43:08 +0000

clant (1.0.4) stable; urgency=medium

  * Exit with non-zero status when errors are found
  * Modernize code

 -- David Robillard <d@drobilla.net>  Tue, 12 Jul 2022 00:13:40 +0000

clant (1.0.2) stable; urgency=medium

  * Avoid running tools on sources in the build directory
  * Fix the jobs command line parameter
  * Include documentation in distribution
  * Print a warning when include-what-you-use fails
  * Print quoted includes first
  * Print the context of clang-tidy errors
  * Use include mapping files when checking extra headers

 -- David Robillard <d@drobilla.net>  Wed, 06 Jan 2021 22:39:49 +0000

clant (1.0.0) stable; urgency=medium

  * Initial release

 -- David Robillard <d@drobilla.net>  Sun, 13 Dec 2020 19:00:30 +0000