@@ -1,8 +1,9 @@
 clant (1.1.0) unstable; urgency=medium
 
+  * Add --fix flag to automatically fix issues if possible
   * Add --headers flag to enable checking individual headers
 
- -- David Robillard <d@drobilla.net>  Thu, 14 Jul 2022 18:43:08 +0000
+ -- David Robillard <d@drobilla.net>  Sun, 13 Oct 2024 13:14:19 +0000
 
 clant (1.0.4) stable; urgency=medium
 
